# DataForge

./: .env.example  .gitignore  README.md  pyproject.toml  report-intent-distillation-design.md
.dataforge/: dataforge.db  runtime_provider_models.json  runtime_providers.json
dataforge.egg-info/: PKG-INFO  SOURCES.txt
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/scripts/: backend_entry.py  build-backend.mjs  build-resources.mjs  prepare-seed.mjs
docs/: DataForge-mvp-development-checklist.md  DataForge-platform-mvp-design.md  architecture.md  sqlite-full-migration-plan.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/js/core/: constants.js  platform.js  review.js  task-config.js
frontend/js/modules/: artifacts.js  review.js  task-spec.js
frontend/src/: App.jsx  styles.css
frontend/src/constants/: app.js
frontend/src/lib/: api.js  artifacts.js  review.js  taskConfig.js  utils.js
frontend/styles/: base.css  index.css  theme.css  tokens.css
src/dataforge/: __init__.py  cli.py
src/dataforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dataforge/core/: db.py  dedupe.py  env.py  eval_runner.py  exporters.py  io.py  (+10 more)
tasks/report-intent-distill/: README.md
tests/: test_db.py  test_dedupe.py  test_eval_runner.py  test_exporters.py  test_filters.py  test_logging_config.py  test_migrate_runs_to_sqlite.py  test_pipeline_smoke.py  test_providers.py  test_registry.py  test_review.py  test_schema.py  test_storage.py  test_student_export.py  test_web_app.py
(+96 files in other folders)
