[project]
name = "dataforge"
version = "0.1.0"
description = "DataForge MVP platform skeleton"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.39.0",
]

[project.scripts]
dataforge = "dataforge.cli:main"
dataforge-web = "dataforge.web.app:main"
dataforge-migrate-sqlite = "dataforge.scripts.migrate_runs_to_sqlite:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
